# rpg

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  bootstrap.bat  bootstrap.sh  make_symlink.bat.in  vcpkg.json
apps/: CMakeLists.txt  main.cpp
cmake/: dependencies.cmake
lib/: CMakeLists.txt
lib/include/rpg/: action.hpp  guid.hpp  math.hpp  scheduled_action.hpp  texture_paths.in.hpp
lib/include/rpg/controllers/: movement.hpp
lib/include/rpg/operators/: guid.hpp
lib/include/rpg/window/: input.hpp  key_position.hpp  key_state.hpp  keyboard_input.hpp
test/: CMakeLists.txt
test/include/rpg/test/: comparison.hpp
test/include/rpg/test/mocks/: guid.hpp  input.hpp  keyboard_input.hpp  speed.hpp  window_input.hpp
test/unit/: CMakeLists.txt  scheduled_action.cpp
test/unit/controllers/: CMakeLists.txt  movement.cpp
test/unit/window/: CMakeLists.txt  input.cpp
textures/: CMakeLists.txt
