add_library(rpgtestlib INTERFACE)
target_include_directories(rpgtestlib INTERFACE include)
target_link_libraries(rpgtestlib INTERFACE GTest::gmock rpg::lib)
if (${RPG_OS_IS_WINDOWS})
    target_compile_definitions(rpgtestlib INTERFACE RPG_TESTING GTEST_LINKED_AS_SHARED_LIBRARY)
else()
    target_compile_definitions(rpgtestlib INTERFACE RPG_TESTING)
endif()
add_library(rpg::test::lib ALIAS rpgtestlib)
add_custom_target(run_all_unit_tests)
add_subdirectory(unit)
